--- a/views/index.ejs
+++ b/views/index.ejs
@@ -100,36 +100,42 @@
                 <div class="mb-5 row d-none-992-down">
                     <div class="col-12">
                         
-                        <div class="landing-info col-md-3 offset-md-3">
-                            <div class="row my-2">
-                                <div class="info-icon col-3 d-flex justify-content-center align-items-center">
-                                    <img src="/img/icon_cards.png" class="img-fit-small" alt="cards">
-                                </div>
-                                <div class="col-9">
-                                    <p class="info-main"><%= numOfCards %> interaktivních kartiček</p>
-                                    <p class="info-secondary text-muted">a přibývají každý týden</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="landing-info col-md-3 offset-md-3">
-                            <div class="row my-2">
-                                <div class="info-icon col-3 d-flex justify-content-center align-items-center">
-                                    <img src="/img/icon_mobileandpc.png" class="img-fit-small" alt="cards">
-                                </div>
-                                <div class="col-9">
-                                    <p class="info-main">Opakuj kdykoliv a kdekoliv</p>
-                                    <p class="info-secondary text-muted">na mobilu i u počítače</p>
+                        <div class="landing-info col-12">
+                            <div class="col-md-6 offset-md-3">
+                                <div class="row my-2">
+                                    <div class="info-icon col-3 d-flex justify-content-center align-items-center">
+                                        <img src="/img/icon_cards.png" class="img-fit-small" alt="cards">
+                                    </div>
+                                    <div class="col-9">
+                                        <p class="info-main"><%= numOfCards %> interaktivních kartiček</p>
+                                        <p class="info-secondary text-muted">a přibývají každý týden</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="landing-info col-md-3 offset-md-3">
-                            <div class="row my-2">
-                                <div class="info-icon col-3 d-flex justify-content-center align-items-center">
-                                    <img src="/img/icon_knowledge.png" class="img-fit-small" alt="cards">
+                        <div class="landing-info">
+                            <div class="col-md-6 offset-md-3">
+                                <div class="row my-2">
+                                    <div class="info-icon col-3 d-flex justify-content-center align-items-center">
+                                        <img src="/img/icon_mobileandpc.png" class="img-fit-small" alt="cards">
+                                    </div>
+                                    <div class="col-9">
+                                        <p class="info-main">Opakuj kdykoliv a kdekoliv</p>
+                                        <p class="info-secondary text-muted">na mobilu i u počítače</p>
+                                    </div>
                                 </div>
-                                <div class="col-9">
-                                    <p class="info-main"><%= numOfCategories %> oblastí, <%= numOfSections  %> balíčků</p>
-                                    <p class="info-secondary text-muted">komplexní pokrytí studijního materiálu</p>
+                            </div>
+                        </div>
+                        <div class="landing-info">
+                            <div class="col-md-6 offset-md-3">
+                                <div class="row my-2">
+                                    <div class="info-icon col-3 d-flex justify-content-center align-items-center">
+                                        <img src="/img/icon_knowledge.png" class="img-fit-small" alt="cards">
+                                    </div>
+                                    <div class="col-9">
+                                        <p class="info-main"><%= numOfCategories %> oblastí, <%= numOfSections  %> balíčků</p>
+                                        <p class="info-secondary text-muted">komplexní pokrytí studijního materiálu</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -172,25 +178,6 @@
                 <div class="col-md-8 offset-md-2 text-center my-5">
                     <h1 class="mb-4">Naše vize</h1>
                     <p class="fs-5">Mladí právníci se neustále potýkají se zkouškami, ať už na právnické fakultě nebo v průběhu dalšího profesního vzdělávání po jejím absolvování. Jsme si vědomi této náročné cesty, proto jsme vytvořili nástroj, který bychom sami v době našich studií ocenili. S radostí vám představujeme <strong class="color-1">InLege</strong>, inovativní webovou aplikaci nejen pro studenty práv.</p>
-
-                    <!--
-                    <p class="fs-5">Naší filozofií je, aby bylo InLege každodenním nástrojem pro co nejvíce studentů. Proto jsme si stanovili jako základní pravidlo, že bude vždy <strong style="color:#E80F88">nejméně 50 % obsahu zdarma</strong>. A to držíme!</p>
-                    <h1>Mladí Právníci, Zkoušky a InLege</h1>
-
-
-<p>Naše filozofie spočívá v poskytnutí užitečného nástroje, který vám usnadní přípravu na zkoušky a zefektivní váš studijní proces. Jsme přesvědčeni, že InLege se stane nezbytným společníkem na této náročné cestě. Proč?</p>
-<ol>
-    <li><strong>Zkušenostní Přístup:</strong> Jako absolventi práv jsme sami procházeli touto cestou, a tak jsme vytvořili aplikaci s ohledem na potřeby mladých právníků.</li>
-
-    <li><strong>Více než 2 500 Karet:</strong> InLege obsahuje více než 2 500 kartiček s otázkami a odpověďmi z různých oblastí práva, poskytující komplexní pokrytí materiálu.</li>
-
-    <li><strong>Efektivní Příprava:</strong> Cílem InLege je nejen usnadnit vám život, ale také vám poskytnout efektivní nástroj pro přípravu na zkoušky a další profesní výzvy.</li>
-
-    <li><strong>Dostupnost pro Všechny:</strong> Věříme, že každý student by měl mít přístup k kvalitním studijním materiálům. Proto jsme se zavázali, že alespoň 50 % obsahu InLege bude vždy dostupné zdarma.</li>
-</ol>
-
-<p>InLege není pouze aplikací, je to společenství mladých právníků, kteří sdílejí váš zájem a chtějí vám pomoci na cestě k úspěchu. Připojte se k nám a dejte nám šanci vám usnadnit cestu k právnickému úspěchu!</p>
--->
                 </div>
             </div>
         </div>
@@ -286,7 +273,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> 
     <script src="https://kit.fontawesome.com/c9f8e59b45.js" crossorigin="anonymous"></script>
     <script src="/js/jquery.min.js" ></script>
-    <script type="text/javascript" src="/js/custom.js"></script>
+    <script type="text/javascript" src="/js/cookies.js"></script>
 </body>
 </html>
 
