--- a/views/partials/cookiesBar.ejs
+++ b/views/partials/cookiesBar.ejs
@@ -1,9 +1,8 @@
 <% if(cookiesAgreed !== true && !currentUser){ %>
     <div class="cookies-warning" id="cookies-warning">
         <p class="">
-            InLege vyžaduje pro správné fungování cookies. Užitím webu souhlasíte s užitím cookies. | <a href="/legal/gdpr">Více informací</a>
+            Aplikace InLege potřebuje pro správné fungování cookies. | <a href="/legal/cookies">Nastavení cookies</a>
         </p>
-        
-        <a href="#" class="btn-agree" id="btn-agree">Beru na vědomí</a>
+        <a href="#" class="btn-agree" id="btn-agree">Povolit vše</a>
     </div>
 <% } %>
