--- a/public/css/card.css
+++ b/public/css/card.css
@@ -56,6 +56,10 @@
     max-height: 100%;
   }
 
+  .card-text p {
+    margin-bottom: 0;
+  }
+
 /* SHOW CARD PAGE */
 .text-smaller {
     font-size: 0.875rem;
@@ -148,7 +152,8 @@
 #btn-dalsi-rendered,
 #btn-dalsi-last-card,
 #btn-otocit,
-#btn-otocit-rendered {
+#btn-otocit-rendered,
+#btn-dalsi-filler {
   min-width: 120px;
 }
 
