--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -8,6 +8,14 @@
     background-blend-mode: darken;
 }
 
+.about-header {
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/bg_cover5.jpeg) no-repeat center center; 
+    background-size: cover;
+    min-height: 350px;
+    color: white;
+    background-blend-mode: darken;
+}
+
 .call-to-action {
     zoom: 130%;
 }
@@ -49,6 +57,11 @@
     padding: 10px;
     padding-top: 0px;
     padding-right: 15px;
+}
+
+.img-fit-profile {
+    max-width:100%;
+    max-height:100%;
 }
 
 .img-fit-small {
@@ -132,6 +145,11 @@
 
 .reason-icon-background {
     background-color: #EEEEEE;
+    width: 6.5rem;
+    height: 6.5rem;
+}
+
+.profile-pic-size {
     width: 6.5rem;
     height: 6.5rem;
 }
