--- a/views/cards/savedCards.ejs
+++ b/views/cards/savedCards.ejs
@@ -23,9 +23,12 @@
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
                     <div class="card profile-card">
-                        <div class="row p-3 pb-0">
-                            <div class="col-12">
-                                <h3 class="pb-3 mb-0">Uložené kartičky</h3>
+                        <div class="row p-3">
+                            <div class="col-12 d-flex align-items-center">
+                                <div class="rounded-circle icon-background d-flex justify-content-center align-items-center">
+                                    <img src="/img/icon_cards.png" class="img-fit" alt="">
+                                </div>
+                                <h3 class="px-3">Uložené kartičky</h3>
                             </div>
                         </div>
                     </div>
@@ -68,7 +71,7 @@
                         <div class="card">
                             <div class="row p-3 pb-0">
                                 <div class="col-12" id="<%= cat.name %>">
-                                    <h5 class="d-flex align-items-center px-4">
+                                    <h5 class="d-flex align-items-center">
                                         <div class="rounded-circle icon-background d-flex justify-content-center align-items-center">
                                             <img class="img-fit" src="/img/<%= cat.icon%>" alt="">
                                         </div>
