--- a/views/cards/showAjax.ejs
+++ b/views/cards/showAjax.ejs
@@ -82,7 +82,7 @@
             <% } else { %>  
               <div class="border-grey flip-card-inner" id="flip-card-inner" currentCardUrl="/category/<%=card.category%>/section/<%=card.section%>/cardAjax/<%= nextNum - 1 %>">
             <% } %>
-            <% if (!currentUser && demoCardsSeen > 10) { %>
+            <% if (!currentUser && demoCardsSeen > 5) { %>
               <div class="card-body flip-card-front pb-0 px-0">
                 <div class="row height-100 demo-finished-card">
                   <div class="col-12 d-flex flex-column justify-content-center align-items-center ">
@@ -93,7 +93,7 @@
                 </div>
               </div>
             <% } else { %>
-              <div class="card-body flip-card-front pb-0 px-0">
+              <div class="card-body flip-card-front p-sm-3 pt-sm-4 px-0 pt-3">
                 <div class="front-main-content d-flex justify-content-center align-items-center">
                   <div id="loaderA"></div>
                   <div class="card-text m-4 text-center" id="pageA"><%- card.pageA %></div>
@@ -245,6 +245,10 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
       <script src="/js/card.js?ddfkhkl"></script>
+      <!--element for JS properly working while loading data-->
+      <div id="data-loaded-wrapper">
+        <div id="data-loaded"></div>
+      </div>
 </body>
 
 </html>
