--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -28,6 +28,9 @@
                 <li class="nav-item">
                   <a class="nav-link premium" href="/premium">Premium</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/about">O projektu</a>
+                </li>
                 <% if (!currentUser) { %>
                 <li class="nav-item">
                   <a class="nav-link" href="/auth/user/login">Přihlásit se</a>
