--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -203,6 +203,7 @@
     <script src="/js/jquery.min.js" ></script>
     <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
     <script type="text/javascript" src="/js/payments.js"></script>
+    <script type="text/javascript" src="/js/cookies.js"></script>
 </body>
 </html>
 
