routes checked: admin, legal, home

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -43,7 +43,7 @@
               <div class="row">
                   <div class="col-md-5 offset-md-1 my-5 p-4">
                     <h1 class="jumbotron-heading mb-3">O projektu <span class="color-1">InLege</span></h1>
-                    <p class="lead"><strong>InLege</strong> je inovativní vzdělávací portál pro studenty právnických fakult, jehož obsahem jsou interaktivní kartičky určené zejména pro opakování učiva před semináři a zkouškami.</p>        
+                    <p class="lead"><strong>InLege</strong> je inovativní vzdělávací portál pro studenty právnických fakult, jehož obsahe tvoří především interaktivní kartičky určené zejména pro opakování učiva před semináři a zkouškami.</p>        
                 </div>
               </div>
           </div>
@@ -136,7 +136,7 @@
                                 <div class="row">
                                     <div class="col-4 d-flex justify-content-center align-items-center">
                                         <div class="rounded-circle reason-icon-background d-flex justify-content-center align-items-center">
-                                            <img src="/img/icon-reason-1.png" class="img-fit" alt="" />
+                                            <img src="/img/icon_idea.png" class="img-fit" alt="" />
                                         </div>
                                     </div>
                                     <div class="col-8">
@@ -154,7 +154,7 @@
                                 <div class="row">
                                     <div class="col-4 d-flex justify-content-center align-items-center">
                                         <div class="rounded-circle reason-icon-background d-flex justify-content-center align-items-center">
-                                            <img src="/img/icon-reason-2.png" class="img-fit" alt="" />
+                                            <img src="/img/icon_highfive.png" class="img-fit" alt="" />
                                         </div>
                                     </div>
                                     <div class="col-8">
@@ -176,10 +176,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-10 offset-md-1 mb-5">
-                    <h1 class="mb-3 text-center">A co bude dál?</h1>
+                    <h1 class="mb-4 text-center">A co bude dál?</h1>
                     <div class="row">
                         <div class="col-12 mb-3">
-                            <p class="fs-5 text-center">Spuštění projektu v prosinci 2023 je vlastně teprve začátkem. Máme spoustu nápadů, jak InLege vylepšit a udělat ještě užitečnějším. Nejen, že chceme zněkolikanásobit množství obsahu v podobně interaktivních kartiček, ale rádi bychom přidali také nové funkce, jako jsou testové otázky, miniklauzury apod. Čím více spokojených uživatelů budeme mít, tím lepší bude i InLege. Neváhejte proto prosím nejen šířit InLege mezi své přátele, ale také se neostýchejte poskytnout nám <a href="/legal/feedback">zpětnou vazbu</a>. Slibujeme, že ji vezmeme v potaz při dalším rozvoji aplikace.</p>
+                            <p class="fs-5 text-center">Spuštění projektu v prosinci 2023 je vlastně teprve začátkem. Máme spoustu nápadů, jak InLege vylepšit a udělat ještě užitečnějším. Nejen, že chceme zněkolikanásobit množství obsahu v podobně interaktivních kartiček, ale rádi bychom přidali také nové funkce, jako jsou testové otázky, miniklauzury apod. Čím více spokojených uživatelů budeme mít, tím lepší bude i InLege. Neváhejte proto prosím nejen šířit InLege mezi své přátele, ale také poskytnout nám <a href="/legal/feedback">zpětnou vazbu</a>. Slibujeme, že ji vezmeme v potaz při dalším rozvoji aplikace.</p>
                         </div>
                     </div>
                 </div>
