--- a/views/legal/contact.ejs
+++ b/views/legal/contact.ejs
@@ -13,14 +13,14 @@
                         <p>Kontaktní osoba</p>
                     </div>
                     <div class="col-8">
-                        <p>Jakub Spáčil</p>
+                        <p>Mgr. Jakub Spáčil</p>
                     </div>
                     <hr />
                     <div class="col-4 fw-bold">
                         <p>E-mail</p>
                     </div>
                     <div class="col-8">
-                        <p><b><a href="mailto:info@inlege.cz">info@inlege.cz</a></b></p>
+                        <p><a href="mailto:info@inlege.cz">info@inlege.cz</a></p>
                     </div>
                     <hr />
                     <div class="col-4 fw-bold">
@@ -31,14 +31,14 @@
                     </div>
                     <hr />
                     <div class="col-4 fw-bold">
-                        <p>Adresa</p>
+                        <p>Sídlo</p>
                     </div>
                     <div class="col-8">
                         <p>Ztracená 335/19,<br /> Olomouc 779 00</p>
                     </div>
                     <hr />
                     <div class="col-4 fw-bold">
-                        <p>IČO:</p>
+                        <p>IČO</p>
                     </div>
                     <div class="col-8">
                         <p>08900230</p>
