--- a/views/admin/email.ejs
+++ b/views/admin/email.ejs
@@ -3,6 +3,7 @@
     <div class="row">
         <div class="col-11 offset-1 mb-3">
             <h5>E-mail</h5>
+            <p>Konstrukce e-mailu musí respektovat opt-out pravidla SendGrid - <a href="https://support.sendgrid.com/hc/en-us/articles/4404315959835-Twilio-SendGrid-Email-Opt-in-and-Opt-out-Requirements">info zde</a> a <a href="https://www.twilio.com/en-us/legal/service-country-specific-terms/email">zde</a></p>
         </div>
     </div>
     <div class="row">
