--- a/views/cards/reportSubmited.ejs
+++ b/views/cards/reportSubmited.ejs
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-12 offset-md-3">
-            <div class="card shadow text-center p-4">
+            <div class="card text-center p-4">
                 <h3>Odesláno</h3>
                 <p class="my-4"><i class="far fa-check-circle fa-3x color-1"></i></p>
                 <p class="mt-3">Děkujeme za zpětnou vazbu, mrkneme se na to!</p>
