--- a/views/legal/feedback.ejs
+++ b/views/legal/feedback.ejs
@@ -15,10 +15,16 @@
                         <div class="col-lg-8">
                             <form action="/legal/feedback" method="POST">
                                 <div class="form-group mb-3">
-                                    <input type="text" class="form-control mt-2" id="name" name="name" value="<%= user.firstname %> <%= user.lastname %>" required>
+                                    <input type="text" class="form-control mt-2" id="name" name="name" 
+                                    <% if (user.firstname) { %>
+                                        value="<%= user.firstname %> <%= user.lastname %>"
+                                    <% } else { %>
+                                        placeholder="Jméno" 
+                                     <% } %>
+                                        required>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control mt-2" id="email" name="email" value="<%= user.email %>" required>
+                                    <input type="email" class="form-control mt-2" id="email" name="email" value="<%= user.email %>" placeholder="E-mail" required>
                                 </div>
                                 <div class="form-group">
                                     <textarea class="form-control mt-2" id="text" name="text" rows="10" placeholder="Tvé nápady a připomínky..." required></textarea>
