--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -6,7 +6,7 @@
             <div class="card height-100">
                 <div class="card-body p-4 px-5">
                 <div class="text-center">
-                    <h1 class="mb-3 mt-2">Registrace</h1>
+                    <h1 class="mb-3 mt-2">Vytvořit účet</h1>
                     <p class="text-smaller text-muted text-center mb-0">
                         Většina obsahu InLege je po registraci dostupná zdarma. Napořád. <br>
                         <a href="#" data-bs-toggle="modal" data-bs-target="#moreInfo">Zjistit více</a>
