--- a/views/index.ejs
+++ b/views/index.ejs
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                 </div>
-            <div class="row">
+            <div class="row" id="categories-row">
                 <div class="offset-lg-2 col-lg-8">
                     <div class="row">
                         <% categories.forEach(cat => { %>
