--- a/views/legal/cookiesForm.ejs
+++ b/views/legal/cookiesForm.ejs
@@ -38,7 +38,11 @@
                                       <strong>Marketingové cookies</strong> (Pomáhají nám s marketingem, například měřením úspěšnosti reklamních kampaní.)
                                     </label>
                                   </div>
-                                <button type="submit" class="btn btn-danger mt-3">Uložit nastavení</button>
+                                  <div class="d-flex align-items-center mt-3">
+                                    <a href="/cookies-agreed-form" class="btn btn-danger">Povolit vše</a>
+                                    <button type="submit" class="btn btn-outline-danger mx-2">Uložit nastavení</button>
+                                  </div>
+                                
                             </form>
                         </div>
                     </div>
