--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -29,6 +29,9 @@
                   <a class="nav-link premium" href="/premium">Premium</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="/#categories-row">Vybrat předmět</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="/about">O projektu</a>
                 </li>
                 <% if (!currentUser) { %>
