--- a/views/cards/report.ejs
+++ b/views/cards/report.ejs
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4 offset-md-4">
-            <div class="card shadow">
+            <div class="card">
                 <div class="card-body">
                     <div class="text-center">
                         <h4 class="mb-3 mt-2">Nahlásit chybu na kartě</h4>
@@ -22,7 +22,7 @@
                     <form class="row g-3 mt-1" action="/cards/report/<%= card._id %>" method="POST">
                         <div class="mt-3">
                             <label for="reportMsg" class="form-label" required>Popis chyby</label>
-                            <textarea class="form-control" name="reportMsg" id="reportMsg" rows="8"></textarea>
+                            <textarea class="form-control" style="border:1px solid #DFDFDF;border-radius: 5px" name="reportMsg" id="reportMsg" rows="8"></textarea>
                         </div>
                         <div class="">
                             <button class="btn btn-danger w-100 mt-3" type="submit">Odeslat</button>
