--- a/views/sections/finishedLive.ejs
+++ b/views/sections/finishedLive.ejs
@@ -30,8 +30,8 @@
                     </div>
                     <div class="row mt-3">
                         <div class="col-12">
-                            <a href="/category/<%= category%>/section/<%= section._id%>/cardAjax/repeatSection" class="btn btn-lg btn-danger mb-4"><i class="fas fa-redo"></i></a>
-                            <a href="/category/<%= category%>/" class="btn btn-lg btn-danger mb-4">Zpět na kategorii</a>
+                            <a href="/category/<%= category%>/section/<%= section._id%>/cardAjax/repeatSection" class="btn btn-danger mb-4"><i class="fas fa-redo"></i></a>
+                            <a href="/category/<%= category%>/" class="btn btn-danger mb-4">Zpět na kategorii</a>
                         </div>
                     </div>
                 <!--pokud se nejedna o posledni sekci zobrazi se tento kod (odkaz na dalsi balicek)-->
@@ -49,7 +49,7 @@
                                     <p class="mb-4 grey-highlight px-3 py-2">Navazující balíček je přístupný jen <br>s <b>předplatným Premium</b>.</p>
                                 </div>
                                 <a href="/category/<%= category%>/section/<%= section._id%>/cardAjax/repeatSection" class="btn btn-danger mb-4"><i class="fas fa-redo"></i></a>
-                                <a href="/premium" class="btn btn-lg btn-danger mb-4">Zjistit více</a>
+                                <a href="/premium" class="btn btn-danger mb-4">Zjistit více</a>
                             <% } else { %>
                                 <a href="/category/<%= category%>/section/<%= section._id%>/cardAjax/repeatSection" class="btn btn-danger mb-4"><i class="fas fa-redo"></i></a>
                                 <a href="/category/<%= category%>/section/<%= section.nextSection%>/cardAjax/1" class="btn btn-danger mb-4">Pokračovat na další balíček</a>
