--- a/views/legal/contact.ejs
+++ b/views/legal/contact.ejs
@@ -20,7 +20,7 @@
                         <p>E-mail</p>
                     </div>
                     <div class="col-8">
-                        <p><a href="mailto:info@inlege.cz">info@inlege.cz</a></p>
+                        <p><a href="mailto:jakub@inlege.cz">jakub@inlege.cz</a></p>
                     </div>
                     <hr />
                     <div class="col-4 fw-bold">
