--- a/views/legal/feedback.ejs
+++ b/views/legal/feedback.ejs
@@ -8,7 +8,7 @@
                             <h3>Stojíme o tvou zpětnou vazbu</h3>
                             <p class="my-4">InLege je projekt, na kterém stále pracujeme. Budeme rádi za tvé připomínky a nápady na
                                 zlepšení. Využij prosím formulář níže nebo nám napiš na e-mail <a
-                                    href="mailto: info@inlege.cz">info@inlege.cz</a>.</p>
+                                    href="mailto: jakub@inlege.cz">jakub@inlege.cz</a>.</p>
                         </div>
                     </div>
                     <div class="row p-3 pt-0">
