--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -65,6 +65,11 @@
     max-height:60%;
 }
 
+.img-fit-100 {
+    max-width:100%;
+    max-height:100%;
+}
+
 .category-headline {
     font-weight: 700;
 }
@@ -284,11 +289,6 @@ form .form-control, .form-select {
     box-shadow: inset 0 -1px 0 rgba(0,0,0,.125);
 }
 
-.img-fit {
-    max-width:60%;
-    max-height:60%;
-}
-
 .icon-background {
     background-color: #EEEEEE;
     height: 3.5rem;
@@ -338,6 +338,11 @@ form .form-control, .form-select {
 /* FOOTER */
 .footer-link {
     color: #6C657D;
+}
+
+.ig-icon {
+    max-height: 2rem;
+    max-width: 2rem;
 }
 
 /* ADMIN CATEGORIES PAGE*/
